Add context menu; Add ability to edit and delete notes