@@ -4,6 +4,8 @@ import android.os.Parcel;
 import android.os.Parcelable;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -19,19 +21,19 @@ public class Note implements Parcelable {
     private LocalDateTime dateTime;
 
 
-    public static List<Note> all = List.of(
+    public static List<Note> all = new ArrayList<>(Arrays.asList(
             new Note("note 3", "Some text", LocalDateTime.now()),
+            new Note("note 4", "Some 4 text", LocalDateTime.now()),
             new Note("note 2", "Some description", LocalDateTime.now().minusHours(2)),
             new Note("note 0", "A material metaphor is the unifying theory of a rationalized space and a system of motion." +
-                    "The material is grounded in tactile reality, inspired by the study of paper and ink, yet " +
-                    "technologically advanced and open to imagination and magic.\n" +
-                    "Surfaces and edges of the material provide visual cues that are grounded in reality. The " +
-                    "use of familiar tactile attributes helps users quickly understand affordances. Yet the " +
-                    "flexibility of the material creates new affordances that supercede those in the physical " +
-                    "world, without breaking the rules of physics.\n", LocalDateTime.now().minusDays(4)),
+                             "The material is grounded in tactile reality, inspired by the study of paper and ink, yet " +
+                             "technologically advanced and open to imagination and magic.\n" +
+                             "Surfaces and edges of the material provide visual cues that are grounded in reality. The " +
+                             "use of familiar tactile attributes helps users quickly understand affordances. Yet the " +
+                             "flexibility of the material creates new affordances that supercede those in the physical " +
+                             "world, without breaking the rules of physics.\n", LocalDateTime.now().minusDays(4)),
             new Note("note 1", "Some other description", LocalDateTime.now().minusDays(2))
-
-    );
+    ));
 
     public Note(String title, String description, LocalDateTime dateTime) {
         this.id = fakeId.getAndIncrement();
@@ -58,6 +60,14 @@ public class Note implements Parcelable {
 
     public LocalDateTime getDateTime() {
         return dateTime;
+    }
+
+    public void setTitle(String title) {
+        this.title = title;
+    }
+
+    public void setDescription(String description) {
+        this.description = description;
     }
 
     protected Note(Parcel in) {
